--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -1,4 +1,5 @@
 CONFIG_LOCALVERSION="-RevengeOS"
+# CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
 CONFIG_LOG_BUF_SHIFT=19
 CONFIG_UCLAMP_TASK=y
